Fix radio button groups and flow properly on mobile

--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -1,14 +1,5 @@
 @tailwind utilities;
 
-.tw-container h1 {
-  @apply .tw-text-5xl;
-}
-.tw-container h2 {
-  @apply .tw-text-4xl;
-}
-.tw-container h3 {
-  @apply .tw-text-3xl;
-}
 
 .tw-container h1, .tw-container h2, .tw-container h3, .tw-container h4, .tw-container h5, .tw-container h6, {
   @apply .font-sans;
@@ -18,13 +9,11 @@
   @apply .hidden;
 }
 
-.button-group label input:checked {
-  filter: brightness(85%);
-  background-color: purple;
-  color: black;
+.button-group label {
+  @apply .mx-auto !important;
 }
 
-.button-group label {
-  color: black;
-  font-size: 24px;
+.button-group input:checked+label {
+  box-shadow: 0 0 0 .125rem rgba(0, 0, 0, 0.6);
+  @apply .text-black;
 }
